--- a/TwoPassword/TwoPassword.vcxproj.filters
+++ b/TwoPassword/TwoPassword.vcxproj.filters
@@ -63,9 +63,6 @@
     <ClCompile Include="memsafe.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="setting.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="imgui\imconfig.h">
@@ -137,8 +134,11 @@
     <ClInclude Include="tls.h">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="setting.h">
+    <ClInclude Include="config.h">
       <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="json.hpp">
+      <Filter>源文件</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
