--- a/TwoPassword/TwoPassword.vcxproj
+++ b/TwoPassword/TwoPassword.vcxproj
@@ -156,7 +156,6 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="memsafe.cpp" />
     <ClCompile Include="safekdf.cpp" />
-    <ClCompile Include="setting.cpp" />
     <ClCompile Include="tpcs.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -171,10 +170,11 @@
     <ClInclude Include="imgui\imstb_rectpack.h" />
     <ClInclude Include="imgui\imstb_textedit.h" />
     <ClInclude Include="imgui\imstb_truetype.h" />
+    <ClInclude Include="json.hpp" />
     <ClInclude Include="literals.h" />
     <ClInclude Include="memsafe.h" />
     <ClInclude Include="safekdf.h" />
-    <ClInclude Include="setting.h" />
+    <ClInclude Include="config.h" />
     <ClInclude Include="tls.h" />
     <ClInclude Include="tpcs.h" />
     <ClInclude Include="utfcpp\utf8.h" />
