优化UI & 优化字体

--- a/TwoPassword/TwoPassword.vcxproj.filters
+++ b/TwoPassword/TwoPassword.vcxproj.filters
@@ -134,5 +134,8 @@
     <ClInclude Include="json.hpp">
       <Filter>源文件</Filter>
     </ClInclude>
+    <ClInclude Include="vivoSans-Light.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
