--- a/TwoPassword/TwoPassword.vcxproj
+++ b/TwoPassword/TwoPassword.vcxproj
@@ -182,6 +182,7 @@
     <ClInclude Include="utfcpp\utf8\cpp17.h" />
     <ClInclude Include="utfcpp\utf8\cpp20.h" />
     <ClInclude Include="utfcpp\utf8\unchecked.h" />
+    <ClInclude Include="vivoSans-Light.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
